<resources>
    <string name="app_name">taller1movil</string>
    <string name="titulo">Venta de Manillas</string>
    <string name="material">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo">Tipo</string>
    <string name="cantidad">Cantidad</string>
    <string name="moneda">Moneda</string>
    <string name="total">Total a pagar</string>
    <string name="error_numero1">Digite un valor valido</string>

    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string-array name="listamaterial">
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>

    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string-array name="listadije">
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>

    <string name="oro">Oro</string>
    <string name="oroRosado">Oro Rosado</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string-array name="listatipo">
        <item>@string/oro</item>
        <item>@string/oroRosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>

    <string name="usd">Usd</string>
    <string name="pesos">Pesos</string>
    <string-array name="listamoneda">
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>

</resources>
